--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </section>
     </div>
 
-    <div id="fimJogo">
-        
-    </div>
+    <div class="fimJogo" id="telaEscura"></div>
+
+    <div class="fimJogo" id="Mensagem"></div>
 
     <script src="js/html5shiv.js"></script>
     <script src="js/Jogo.js"></script>
