--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="fimJogo" id="Mensagem">
         <div id="texto"></div>
-        <button onclick="refresh()">Próximo round?</button>
+        <button onclick="refresh()" id="nextRound">Próximo round?</button>
     </div>
 
     <script src="js/html5shiv.js"></script>
